Handle data types in negative positions in contradiction meta